$Id: ChangeLog,v 1.447 2008/07/09 14:27:07 haraldkipp Exp $

2008-07-09  Harald Kipp  <harald.kipp@egnite.de>

	* conf/dev/dev.nut, dev/x12rtc.c: Made EEPROM_PAGE_SIZE configurable. 
	I'm not convinced whether this makes sense, but it won't hurt.

	* pro/cgi.c: Bug #1799374 fixed, without adding any code, as suggested
	by Jason. I like these kind of code-size-aware enhancements.

	* crt/getf.c: Added support for length modifier h. According
	to C99, F, G and X type specifiers should work like f, g, and x.
	Thanks to Martin Ludwig for his suggestions. Fixes bugs
	#1711107 and #2003064.

	* arch/arm/init/crtat91sam7se512_ram.S, conf/tools.nut, 
	arch/arm/ldscripts/at91sam7se512_ram.ld, conf/repository.nut: 
	Added capability to load the code directly into RAM for easier 
	debugging. Contributed by Michael Fischer.


2008-07-08  Harald Kipp  <harald.kipp@egnite.de>

	* conf/pro/pro.nut, include/cfg/http.h, pro/httpd.c: Several HTTP 
	server options are now configurable. Keepalive is now disabled by 
	default to maintain backward compatibility. Fixes bug #1968754.

	* crt/putf.c: Starting from avr-libc 1.6.0 (WinAVR-20071221 and 
	newer) declaration of dtostrf has changed. Many thanks to
	Andrzej Lawrynowicz. Fixes bug #1871390.

	* arch/arm/dev/ostimer_at91.c, arch/arm/dev/ostimer_gba.c,
	arch/arm/dev/ostimer_lpc2xxx.c, arch/arm/dev/ostimer_s3c4510b.c,
	arch/avr/dev/ostimer.c, arch/unix/dev/ostimer.c, conf/os/os.nut,
	include/arch/timer.h, include/sys/timer.h, os/timer.c:
	Architecture specific implementations of NutDelay replaced by
	a more general one, which tries to automatically determine the
	required number of loops during NutTimerInit. Alternatively this 
	number is configurable. A new function NutMicroDelay has been added.
	Somehow fixes bug #1567794.


2008-07-07  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/os/context.c, conf/os/os.nut, include/arch/arm/atom.h,
	os/thread.c: Three optional ways of handling critical sections are